[package]
name = "sudoku"
version = "0.1.0"
author = ["Dhanvith Nayak <dhanpran3@gmail.com>"]
description = "A CLI application to solve simple sudoku puzzles"
keywords = ["sudoku", "cli", "command-line"]
edition = "2021"

[dependencies]
calamine = "0.18.0"
array_tool = "1.0.3"
anyhow = "1.0.56"
human-panic = "1.0.3"
clap = { version = "3.1.8", features = ["derive"] }