[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
array_tool = "1.0.3"
anyhow = "1.0.56"
human-panic = "1.0.3"
clap = { version = "3.1.8", features = ["derive"] }
itertools = "0.8"