[package]
name = "sudoku"
version = "1.0.0"
authors = ["Dhanvith Nayak <saberdan02@gmail.com>"]
description = "A CLI application to solve simple sudoku puzzles"
keywords = ["sudoku", "cli", "command-line"]

[dependencies]
calamine = "0.18.0"
array_tool = "1.0.3"
anyhow = "1.0.56"
human-panic = "1.0.3"
clap = { version = "3.1.8", features = ["derive"] }
itertools = "0.10.3"
